reformat h2 on home page to fix spacing
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@505 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6099,6 +6099,8 @@ footer {
         display: block;
         list-style-type: none;
         float: left; }
+    .hero .home-content h2 {
+      font-size: 2.75em; }
   .hero aside {
     float: right;
     width: 37.6388889%;
