--- a/css/content/_home.scss
+++ b/css/content/_home.scss
@@ -30,6 +30,7 @@
 				list-style-type:none; 
 				float: left; }
 		}
+		h2 { font-size: 2.75em; }
 	}
 	aside {
 		float: right;
